feat: adds define_cohort function

--- a/main.ipynb
+++ b/main.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "## Intro\n",
     "\n",
-    "The referenced article is a reassessment of Cohen and Einav (2003), which found that mandatory seatbelt laws were associated with a 4–6% reduction in traffic fatalities among motor vehicle occupants. In this reassessment, the authors replicate the estimates of the original study—which applied a two-way fixed effects (TWFE) model—while expanding the time window of analysis. Additionally, they employ event-study models and alternative methods to address potential biases inherent in TWFE. Their results are consistent with the findings of Cohen and Einav (2003).\n",
+    "The referenced article is a reassessment of Cohen and Einav (2003), which found that mandatory seatbelt laws were associated with a 4–6% reduction in traffic fatalities among motor vehicle occupants. In this reassessment, the authors replicate the estimates of the original study—which applied a two-way fixed effects (TWFE) model—while expanding the time window of analysis. Additionally, they employ event-study models and alternative methods to address potential biases inherent in TWFE. Their results are consistent with the findings of Cohen and Einav (2003) yet some reconsiderations are proposed.\n",
     "\n",
     "The main objective of this exercise is to replicate the TWFE estimator robust to heterogeneous treatment effects, as proposed by Sun and Abraham (2021) and explored by Anderson et al. (2024). As noted, the original authors used Stata to obtain their results; therefore, the primary contribution of this exercise is the translation and implementation of their analysis in Python. All information regarding package versions and dependencies is available in the pyproject.toml file."
    ]
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "faa7261a",
    "metadata": {},
    "outputs": [],
@@ -49,11 +49,16 @@
     "\n",
     "import pandas as pd\n",
     "import statsmodels.formula.api as smf\n",
-    "import plotly.graph_objects as plt\n",
+    "import plotly.graph_objects as go\n",
+    "from tools import define_cohort\n",
     "\n",
     "# Data Loading\n",
     "\n",
-    "data = pd.read_csv('data/master_1983to2019.csv')"
+    "data = pd.read_csv('data/master_1983to2019.csv')\n",
+    "\n",
+    "# Define Cohort Years for PSL\n",
+    "\n",
+    "data = define_cohort(data, law_col='primary')"
    ]
   },
   {
