feat: adds regression delete unused

--- a/main.ipynb
+++ b/main.ipynb
@@ -49,16 +49,143 @@
     "\n",
     "import pandas as pd\n",
     "import statsmodels.formula.api as smf\n",
-    "import plotly.graph_objects as go\n",
-    "from tools import define_cohort\n",
+    "import numpy as np\n",
     "\n",
     "# Data Loading\n",
     "\n",
-    "data = pd.read_csv('data/master_1983to2019.csv')\n",
+    "data = pd.read_csv('data/master_1983to2019.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c080a75d",
+   "metadata": {},
+   "source": [
+    "### Cohorts and Treatment Identification\n",
     "\n",
-    "# Define Cohort Years for PSL\n",
+    "For the TWFE specification robust to time heterogeneity, we construct one parameter for each interaction between cohorts and relative time. In order to create the cohorts, we cluster the states which passed Primary Seatbelt Laws in the same year. In addition, for this estimation we only consider as treated those States that passed primary laws first. The control group are those states that never passed primary laws (PSLs). Switchers (i.e those states that first approved secondary seatbelt laws and moved to primary laws are discarted from our sample). This specification follows Anderson et al. (2024)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "05c193e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cohorts and Treatment Identification\n",
     "\n",
-    "data = define_cohort(data, law_col='primary')"
+    "# Identify first year of primary law\n",
+    "psl_years = data[data['primary'] == 1].groupby('fips')['year'].min().reset_index() # fips is the state code\n",
+    "psl_years.rename(columns={'year':'cohort_year'}, inplace=True)\n",
+    "data = data.merge(psl_years, on='fips', how='left')\n",
+    "\n",
+    "# Identify first year of secondary law\n",
+    "ssl_years = data[data['secondary'] == 1].groupby('fips')['year'].min().reset_index()\n",
+    "ssl_years.rename(columns={'year':'ssl_start'}, inplace=True)\n",
+    "data = data.merge(ssl_years, on='fips', how='left')\n",
+    "\n",
+    "# Define treated\n",
+    "data['is_treated'] = np.where(\n",
+    "    (data['cohort_year'].notna()) & (data['ssl_start'].isna()), 1, 0\n",
+    ") # PSL and NO SSL\n",
+    "\n",
+    "# Define control\n",
+    "data['is_control'] = np.where(\n",
+    "    (data['cohort_year'].isna()), 1, 0\n",
+    ")\n",
+    "\n",
+    "# Filter out Switchers\n",
+    "df_reg = data[(data['is_treated'] == 1) | (data['is_control'] == 1)].copy()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "615acaf4",
+   "metadata": {},
+   "source": [
+    "### Time Identification\n",
+    "\n",
+    "For the model we must define the time as relative to the treatment. Also, following the article`s specification, the relative time dummy is set to 1 if t is 4 or more years prior to treatment. The same is valid for 4 or more years after treatment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "db1dd434",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_reg['rel_year'] = df_reg['year'] - df_reg['cohort_year']\n",
+    "df_reg['rel_year_binned'] = df_reg['rel_year'].clip(lower=-4, upper=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a865348f",
+   "metadata": {},
+   "source": [
+    "### Variables and Formula\n",
+    "\n",
+    "The robust to heterogeneous time effects model commands the creation of the Cohort-RelativeYear interaction dummies. Note that the reference period is skipped to avoid perfect multicollinearity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e7782d94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interaction_vars = []\n",
+    "\n",
+    "cohorts = df_reg[df_reg['is_treated']==1]['cohort_year'].unique()\n",
+    "cohorts.sort()\n",
+    "\n",
+    "for cohort in cohorts:\n",
+    "    for rel_t in range(-4, 5): # Range -4 to +4\n",
+    "        if rel_t == -1: continue # Skip reference period (t = -1)\n",
+    "        \n",
+    "        col_name = f'att_C{int(cohort)}_T{rel_t}'.replace(\"-\", \"m\")\n",
+    "        \n",
+    "        # Create Dummy: 1 if unit is in this cohort AND relative time matches\n",
+    "        df_reg[col_name] = np.where(\n",
+    "            (df_reg['cohort_year'] == cohort) & (df_reg['rel_year_binned'] == rel_t), \n",
+    "            1, 0\n",
+    "        )\n",
+    "        interaction_vars.append(col_name)\n",
+    "\n",
+    "control_vars = [\n",
+    "    'secondary', 'ln_pctblack', 'ln_pcthisp', 'ln_medinc', 'ln_age', \n",
+    "    'ln_gastax', 'ln_violentcrimerate', 'ln_propcrimerate', \n",
+    "    'ln_unemprate', 'ln_ruralvmt', 'ln_urbanvmt', 'speed65',\n",
+    "    'speed70', 'mlda21', 'bac8', 'ln_ruralden', 'ln_urbanden'\n",
+    "]\n",
+    "\n",
+    "formula = f\"adj_occrate ~ {' + '.join(interaction_vars)} + {' + '.join(control_vars)} + C(fips) + C(year)\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17efaa99",
+   "metadata": {},
+   "source": [
+    "### Regression\n",
+    "\n",
+    "Standard errors are clustered also following Anderson et al. (2024)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e5dd3000",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = smf.ols(formula, data=df_reg).fit(\n",
+    "    cov_type='cluster',\n",
+    "    cov_kwds={'groups': df_reg['fips']}\n",
+    ")"
    ]
   },
   {
